make sure we use the full list of remote repositories when building the effective model