@@ -1,15 +1,15 @@
 /*
- *  Plugin.java
+ * Plugin.java
  *
- *  Copyright (c) 2016, The University of Sheffield. See the file
- *  COPYRIGHT.txt in the software or at http://gate.ac.uk/gate/COPYRIGHT.txt
+ * Copyright (c) 2016, The University of Sheffield. See the file COPYRIGHT.txt
+ * in the software or at http://gate.ac.uk/gate/COPYRIGHT.txt
  *
- *  This file is part of GATE (see http://gate.ac.uk/), and is free
- *  software, licenced under the GNU Library General Public License,
- *  Version 3, June 2007 (in the distribution as file licence.html,
- *  and also available at http://gate.ac.uk/gate/licence.html).
+ * This file is part of GATE (see http://gate.ac.uk/), and is free software,
+ * licenced under the GNU Library General Public License, Version 3, June 2007
+ * (in the distribution as file licence.html, and also available at
+ * http://gate.ac.uk/gate/licence.html).
  *
- *  Mark A. Greenwood, 3rd April 2016
+ * Mark A. Greenwood, 3rd April 2016
  */
 
 package gate.creole;
@@ -51,6 +51,7 @@ import java.util.jar.JarInputStream;
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
 import org.apache.maven.model.Model;
+import org.apache.maven.model.building.DefaultModelBuilder;
 import org.apache.maven.model.building.DefaultModelBuilderFactory;
 import org.apache.maven.model.building.DefaultModelBuildingRequest;
 import org.apache.maven.model.building.ModelBuilder;
@@ -91,45 +92,47 @@ import gate.util.asm.ClassVisitor;
 import gate.util.asm.Opcodes;
 import gate.util.asm.Type;
 import gate.util.asm.commons.EmptyVisitor;
-//import gate.util.maven.LoggingTransferListener;
+// import gate.util.maven.LoggingTransferListener;
 import gate.util.maven.SimpleMavenCache;
 import gate.util.maven.SimpleModelResolver;
 import gate.util.persistence.PersistenceManager;
 
 public abstract class Plugin {
-  
+
   public static interface DownloadListener {
     public void downloadStarted(String name);
-    
-    public void downloadProgressed(String name, long totalBytes, long transferredBytes);
-    
+
+    public void downloadProgressed(String name, long totalBytes,
+        long transferredBytes);
+
     public void downloadSucceeded(String name);
-    
+
     public void downloadFailed(String name, Throwable cause);
   }
-  
+
   protected Vector<DownloadListener> downloadListeners = null;
-  
+
   public void addDownloadListener(DownloadListener listener) {
     @SuppressWarnings("unchecked")
     Vector<DownloadListener> v = downloadListeners == null
-            ? new Vector<DownloadListener>(2)
-            : (Vector<DownloadListener>)downloadListeners.clone();
+        ? new Vector<DownloadListener>(2)
+        : (Vector<DownloadListener>)downloadListeners.clone();
     if(!v.contains(listener)) {
       v.addElement(listener);
       downloadListeners = v;
     }
   }
-  
+
   public void removeDownloadListener(DownloadListener listener) {
     if(downloadListeners != null && downloadListeners.contains(listener)) {
       @SuppressWarnings("unchecked")
-      Vector<DownloadListener> v = (Vector<DownloadListener>)downloadListeners.clone();
+      Vector<DownloadListener> v =
+          (Vector<DownloadListener>)downloadListeners.clone();
       v.removeElement(listener);
       downloadListeners = v;
     }
   }
-  
+
   protected void fireDownloadStarted(String name) {
     if(downloadListeners != null) {
       for(DownloadListener listener : downloadListeners) {
@@ -137,7 +140,7 @@ public abstract class Plugin {
       }
     }
   }
-  
+
   protected void fireDownloadSucceeded(String name) {
     if(downloadListeners != null) {
       for(DownloadListener listener : downloadListeners) {
@@ -145,7 +148,7 @@ public abstract class Plugin {
       }
     }
   }
-  
+
   protected void fireDownloadFailed(String name, Throwable cause) {
     if(downloadListeners != null) {
       for(DownloadListener listener : downloadListeners) {
@@ -153,41 +156,42 @@ public abstract class Plugin {
       }
     }
   }
-  
-  protected void fireDownloadProgressed(String name, long totalBytes, long transferredBytes) {
+
+  protected void fireDownloadProgressed(String name, long totalBytes,
+      long transferredBytes) {
     if(downloadListeners != null) {
       for(DownloadListener listener : downloadListeners) {
         listener.downloadProgressed(name, totalBytes, transferredBytes);
       }
     }
   }
-  
+
   protected static final Logger log = Logger.getLogger(Plugin.class);
-  
+
   /**
-   * Is the plugin valid (i.e. is the location reachable and the
-   * creole.xml file parsable).
+   * Is the plugin valid (i.e. is the location reachable and the creole.xml file
+   * parsable).
    */
   protected transient boolean valid = true;
-  
+
   /**
-   * This is the URL against which all relative URLs in the CREOLE
-   * metadata are resolved
+   * This is the URL against which all relative URLs in the CREOLE metadata are
+   * resolved
    */
   protected transient URL baseURL;
-  
+
   protected transient String name;
-  
+
   protected transient String description;
 
   /**
    * The list of {@link gate.Gate.ResourceInfo} objects within this plugin
    */
   protected transient List<ResourceInfo> resourceInfoList = null;
-  
+
   /**
-   * The set of other plugins that must be loaded prior to the loading
-   * of this plugin
+   * The set of other plugins that must be loaded prior to the loading of this
+   * plugin
    */
   protected transient Set<Plugin> requiredPlugins = null;
 
@@ -211,21 +215,21 @@ public abstract class Plugin {
   public org.jdom.Document getMetadataXML() throws Exception {
     return getCreoleXML();
   }
-  
+
   public String getName() {
     return name;
   }
-  
+
   public String getDescription() {
     return description;
   }
-  
+
   public Set<Plugin> getRequiredPlugins() {
-    if (requiredPlugins == null) parseCreole();
-    
+    if(requiredPlugins == null) parseCreole();
+
     return requiredPlugins;
-  }   
-    
+  }
+
   @Override
   public int hashCode() {
     final int prime = 31;
@@ -233,7 +237,7 @@ public abstract class Plugin {
     result = prime * result + ((baseURL == null) ? 0 : baseURL.hashCode());
     return result;
   }
-  
+
   @Override
   public String toString() {
     return getName();
@@ -252,65 +256,67 @@ public abstract class Plugin {
   }
 
   public List<ResourceInfo> getResourceInfoList() {
-    if (resourceInfoList == null) parseCreole();
-    
+    if(resourceInfoList == null) parseCreole();
+
     return resourceInfoList;
   }
-  
+
   public URL getBaseURL() {
     return baseURL;
   }
-  
+
   public URI getBaseURI() throws URISyntaxException {
-	return baseURL.toURI();
+    return baseURL.toURI();
   }
-  
+
   public boolean isValid() {
     return valid;
   }
-  
+
   public void copyResources(File dir) throws IOException, URISyntaxException {
-    throw new UnsupportedOperationException("This plugin does not contain any resources that can be copied");
+    throw new UnsupportedOperationException(
+        "This plugin does not contain any resources that can be copied");
   }
-  
+
   public boolean hasResources() {
     return false;
   }
-  
+
   /**
    * Given a class return the Plugin instance from which it was loaded.
+   * 
    * @return the Plugin instance from which the specified class was loaded
    */
   public static Plugin getPlugin(Class<?> clazz) throws IOException {
     URL creoleURL = clazz.getResource("/creole.xml");
-    
-    if (creoleURL == null) return null;
-    
+
+    if(creoleURL == null) return null;
+
     URL baseURL = new URL(creoleURL, ".");
-    
-    for (Plugin plugin : Gate.getCreoleRegister().getPlugins()) {
-      if (plugin.getBaseURL().equals(baseURL))
-        return plugin;
+
+    for(Plugin plugin : Gate.getCreoleRegister().getPlugins()) {
+      if(plugin.getBaseURL().equals(baseURL)) return plugin;
     }
-    
+
     return null;
   }
-  
+
   protected void parseCreole() {
-    
+
     valid = true;
 
     resourceInfoList = new ArrayList<ResourceInfo>();
     requiredPlugins = new LinkedHashSet<Plugin>();
-    
+
     String relativePathMarker = "$relpath$";
     String gatehomePathMarker = "$gatehome$";
     String gatepluginsPathMarker = "$gateplugins$";
-    
+
     try {
       org.jdom.Document creoleDoc = getMetadataXML();
-      
-      final Map<String, ResourceInfo> resInfos = new LinkedHashMap<String, ResourceInfo>();
+
+      final Map<String, ResourceInfo> resInfos =
+          new LinkedHashMap<String, ResourceInfo>();
       List<Element> jobsList = new ArrayList<Element>();
       List<String> jarsToScan = new ArrayList<String>();
       List<String> allJars = new ArrayList<String>();
@@ -323,14 +329,14 @@ public abstract class Plugin {
           Iterator<Attribute> attrsIt = attrs.iterator();
           while(attrsIt.hasNext()) {
             Attribute attr = attrsIt.next();
-            if(attr.getName().equalsIgnoreCase("SCAN") && attr.getBooleanValue()) {
+            if(attr.getName().equalsIgnoreCase("SCAN")
+                && attr.getBooleanValue()) {
               jarsToScan.add(currentElem.getTextTrim());
               break;
             }
           }
           allJars.add(currentElem.getTextTrim());
-        }
-        else if(currentElem.getName().equalsIgnoreCase("RESOURCE")) {
+        } else if(currentElem.getName().equalsIgnoreCase("RESOURCE")) {
           // we don't go deeper than resources so no recursion here
           String resName = currentElem.getChildTextTrim("NAME");
           String resClass = currentElem.getChildTextTrim("CLASS");
@@ -338,50 +344,47 @@ public abstract class Plugin {
           if(!resInfos.containsKey(resClass)) {
             // create the handler
             ResourceInfo rHandler =
-              new ResourceInfo(resName, resClass, resComment);
+                new ResourceInfo(resName, resClass, resComment);
             resInfos.put(resClass, rHandler);
           }
-        }
-        else if(currentElem.getName().equalsIgnoreCase("REQUIRES")) {
-                    
-          if (currentElem.getAttribute("GROUP") != null) {
-            //TODO probably need more error checking here
-            requiredPlugins.add(new Plugin.Maven(currentElem
-                    .getAttributeValue("GROUP"), currentElem
-                    .getAttributeValue("ARTIFACT"), currentElem
-                    .getAttributeValue("VERSION")));
-          }
-          else {        
+        } else if(currentElem.getName().equalsIgnoreCase("REQUIRES")) {
+
+          if(currentElem.getAttribute("GROUP") != null) {
+            // TODO probably need more error checking here
+            requiredPlugins
+                .add(new Plugin.Maven(currentElem.getAttributeValue("GROUP"),
+                    currentElem.getAttributeValue("ARTIFACT"),
+                    currentElem.getAttributeValue("VERSION")));
+          } else {
             URL url = null;
             String urlString = currentElem.getTextTrim();
             if(urlString.startsWith(relativePathMarker)) {
-              url =
-                  new URL(getBaseURL(), urlString.substring(relativePathMarker
-                      .length()));
+              url = new URL(getBaseURL(),
+                  urlString.substring(relativePathMarker.length()));
             } else if(urlString.startsWith(gatehomePathMarker)) {
               URL gatehome = Gate.getGateHome().toURI().toURL();
-              url =
-                  new URL(gatehome,
-                      urlString.substring(gatehomePathMarker.length()));
+              url = new URL(gatehome,
+                  urlString.substring(gatehomePathMarker.length()));
             } else if(urlString.startsWith(gatepluginsPathMarker)) {
               URL gateplugins = Gate.getPluginsHome().toURI().toURL();
-              url =
-                  new URL(gateplugins, urlString.substring(gatepluginsPathMarker
-                      .length()));
+              url = new URL(gateplugins,
+                  urlString.substring(gatepluginsPathMarker.length()));
             } else {
               url = new URL(getBaseURL(), urlString);
             }
-  
+
             requiredPlugins.add(new Plugin.Directory(url));
-            
-            Utils.logOnce(log, Level.WARN, "Dependencies on other plugins via URL is deprecated ("+getName()+" plugin)");
+
+            Utils.logOnce(log, Level.WARN,
+                "Dependencies on other plugins via URL is deprecated ("
+                    + getName() + " plugin)");
           }
-        }
-        else {
+        } else {
           // this is some higher level element -> simulate recursion
           // we want Depth-first-search so we need to add at the beginning
           @SuppressWarnings("unchecked")
-          List<Element> newJobsList = new ArrayList<Element>(currentElem.getChildren());
+          List<Element> newJobsList =
+              new ArrayList<Element>(currentElem.getChildren());
           newJobsList.addAll(jobsList);
           jobsList = newJobsList;
         }
@@ -411,46 +414,44 @@ public abstract class Plugin {
       // the class name.
       for(ResourceInfo ri : incompleteResInfos) {
         if(ri.getResourceName() == null) {
-          ri.setResourceName(ri.getResourceClassName().substring(
-                  ri.getResourceClassName().lastIndexOf('.') + 1));
+          ri.setResourceName(ri.getResourceClassName()
+              .substring(ri.getResourceClassName().lastIndexOf('.') + 1));
         }
       }
 
       // finally, we have the complete list of ResourceInfos
       resourceInfoList.addAll(resInfos.values());
-    }
-    catch(IOException ioe) {
+    } catch(IOException ioe) {
       valid = false;
       log.error("Problem while parsing plugin " + toString() + "!\n"
-        + ioe.toString() + "\nPlugin not available!");
-    }
-    catch(JDOMException jde) {
+          + ioe.toString() + "\nPlugin not available!");
+    } catch(JDOMException jde) {
       valid = false;
       log.error("Problem while parsing plugin " + toString() + "!\n"
-        + jde.toString() + "\nPlugin not available!");
-    }
-    catch(Exception e) {
+          + jde.toString() + "\nPlugin not available!");
+    } catch(Exception e) {
       valid = false;
       log.error("Problem while parsing plugin " + toString() + "!\n"
-        + e.toString() + "\nPlugin not available!");
+          + e.toString() + "\nPlugin not available!");
     }
   }
 
-  protected void scanJar(URL jarUrl, Map<String, ResourceInfo> resInfos) throws IOException {
+  protected void scanJar(URL jarUrl, Map<String, ResourceInfo> resInfos)
+      throws IOException {
     JarInputStream jarInput = new JarInputStream(jarUrl.openStream(), false);
     JarEntry entry = null;
     while((entry = jarInput.getNextJarEntry()) != null) {
       String entryName = entry.getName();
       if(entryName != null && entryName.endsWith(".class")) {
-        final String className = entryName.substring(0,
-                 entryName.length() - 6).replace('/', '.');
+        final String className =
+            entryName.substring(0, entryName.length() - 6).replace('/', '.');
         if(!resInfos.containsKey(className)) {
           ClassReader classReader = new ClassReader(jarInput);
           ResourceInfo resInfo = new ResourceInfo(null, className, null);
           ResourceInfoVisitor visitor = new ResourceInfoVisitor(resInfo);
 
-          classReader.accept(visitor, ClassReader.SKIP_CODE |
-              ClassReader.SKIP_DEBUG | ClassReader.SKIP_FRAMES);
+          classReader.accept(visitor, ClassReader.SKIP_CODE
+              | ClassReader.SKIP_DEBUG | ClassReader.SKIP_FRAMES);
           if(visitor.isCreoleResource()) {
             resInfos.put(className, resInfo);
           }
@@ -462,7 +463,7 @@ public abstract class Plugin {
   }
 
   protected void fillInResInfos(List<ResourceInfo> incompleteResInfos,
-          List<String> allJars) throws IOException {
+      List<String> allJars) throws IOException {
     // now create a temporary class loader with all the JARs (scanned or
     // not), so we can look up all the referenced classes in the normal
     // way and read their CreoleResource annotations (if any).
@@ -473,18 +474,18 @@ public abstract class Plugin {
 
     // TODO shouldn't we use a proper temp gate class loader which we
     // can then throw away?
-    try(URLClassLoader tempClassLoader =
-            new URLClassLoader(jarUrls, Gate.class.getClassLoader());) {
+    try (URLClassLoader tempClassLoader =
+        new URLClassLoader(jarUrls, Gate.class.getClassLoader());) {
       for(ResourceInfo ri : incompleteResInfos) {
         String classFile =
-                ri.getResourceClassName().replace('.', '/') + ".class";
+            ri.getResourceClassName().replace('.', '/') + ".class";
         InputStream classStream =
-                tempClassLoader.getResourceAsStream(classFile);
+            tempClassLoader.getResourceAsStream(classFile);
         if(classStream != null) {
           ClassReader classReader = new ClassReader(classStream);
           ClassVisitor visitor = new ResourceInfoVisitor(ri);
           classReader.accept(visitor, ClassReader.SKIP_CODE
-                  | ClassReader.SKIP_DEBUG | ClassReader.SKIP_FRAMES);
+              | ClassReader.SKIP_DEBUG | ClassReader.SKIP_FRAMES);
           classStream.close();
         }
       }
@@ -493,9 +494,9 @@ public abstract class Plugin {
 
   public static class Directory extends Plugin {
 
-    public Directory(URL directoryURL) {      
-        baseURL = Gate.normaliseCreoleUrl(directoryURL);      
-    }    
+    public Directory(URL directoryURL) {
+      baseURL = Gate.normaliseCreoleUrl(directoryURL);
+    }
 
     @Override
     public Document getCreoleXML() throws Exception {
@@ -519,7 +520,7 @@ public abstract class Plugin {
         name = name.substring(lastSlash + 1);
       }
       try {
-        // convert to (relative) URI and extract path.  This will
+        // convert to (relative) URI and extract path. This will
         // decode any %20 escapes in the name.
         name = new URI(name).getPath();
       } catch(URISyntaxException ex) {
@@ -529,38 +530,40 @@ public abstract class Plugin {
     }
   }
 
-  public static class Maven extends Plugin implements Serializable, TransferListener {
+  public static class Maven extends Plugin
+                            implements Serializable, TransferListener {
 
     private static final long serialVersionUID = -6944695755723023537L;
-    
+
     private String group, artifact, version;
-    
+
     private transient URL artifactURL, metadataArtifactURL;
 
     public Maven(String group, String artifact, String version) {
       this.group = group;
       this.artifact = artifact;
       this.version = version;
-      
-      name = artifact;//group+":"+artifact+":"+version;
+
+      name = artifact;// group+":"+artifact+":"+version;
     }
-    
+
     @Override
     public String getName() {
-      if (name == null) {
+      if(name == null) {
         try {
           getMetadataXML();
         } catch(Exception e) {
-          //ignore this for now
+          // ignore this for now
         }
       }
-      
+
       return name;
     }
-    
+
     @Override
     public URI getBaseURI() throws URISyntaxException {
-    	return new URI("creole://"+group+";"+artifact+";"+version+"/");
+      return new URI(
+          "creole://" + group + ";" + artifact + ";" + version + "/");
     }
 
     @Override
@@ -575,10 +578,10 @@ public abstract class Plugin {
 
     @Override
     public boolean equals(Object obj) {
-            
+
       if(this == obj) return true;
-      if (obj == null) return false;
-      
+      if(obj == null) return false;
+
       if(getClass() != obj.getClass()) return false;
       Maven other = (Maven)obj;
       if(artifact == null) {
@@ -595,11 +598,11 @@ public abstract class Plugin {
 
     @Override
     public void copyResources(File dir) throws URISyntaxException, IOException {
-      
-      if (!hasResources())
+
+      if(!hasResources())
         throw new UnsupportedOperationException(
             "this plugin doesn't have any resources you can copy as you would know had you called hasResources first :P");
-      
+
       try (FileSystem zipFs =
           FileSystems.newFileSystem(artifactURL.toURI(), new HashMap<>());) {
 
@@ -617,44 +620,44 @@ public abstract class Plugin {
             Files.createDirectories(targetPath.getParent());
 
             // And extract the file
-            Files.copy(filePath, targetPath, StandardCopyOption.REPLACE_EXISTING);
+            Files.copy(filePath, targetPath,
+                StandardCopyOption.REPLACE_EXISTING);
 
             return FileVisitResult.CONTINUE;
           }
         });
       }
     }
-    
+
     @Override
-    public boolean hasResources() {   
-      try (FileSystem zipFs = FileSystems.newFileSystem(getMetadataArtifactURL().toURI(), new HashMap<>());) {        
+    public boolean hasResources() {
+      try (FileSystem zipFs = FileSystems
+          .newFileSystem(getMetadataArtifactURL().toURI(), new HashMap<>());) {
         Path pathInZip = zipFs.getPath("/resources");
         return Files.isDirectory(pathInZip);
-      }
-      catch (Exception e) {
+      } catch(Exception e) {
         return false;
       }
     }
-    
+
     protected URL getMetadataArtifactURL() throws Exception {
-      if (metadataArtifactURL != null)
-        return metadataArtifactURL;
-      
-      if (artifactURL != null) return artifactURL;
-      
+      if(metadataArtifactURL != null) return metadataArtifactURL;
+
+      if(artifactURL != null) return artifactURL;
+
       getMetadataXML();
-      
+
       return metadataArtifactURL;
     }
-    
+
     protected URL getArtifactURL() throws Exception {
-      if (artifactURL == null) {
+      if(artifactURL == null) {
         getCreoleXML();
       }
-      
+
       return artifactURL;
     }
-    
+
     @Override
     public Document getMetadataXML() throws Exception {
       Artifact artifactObj =
@@ -688,7 +691,7 @@ public abstract class Plugin {
         }
       }
       workspaces.addAll(gate.util.maven.Utils.getExtraCacheDirectories());
-      
+
       if(!workspaces.isEmpty()) {
         workspace = new SimpleMavenCache(
             workspaces.toArray(new File[workspaces.size()]));
@@ -707,36 +710,38 @@ public abstract class Plugin {
         // check it has a creole.xml at the root
         URL expandedCreoleUrl =
             new URL(metadataArtifactURL, "META-INF/gate/creole.xml");
-        
-        try (InputStream creoleStream = expandedCreoleUrl.openStream()){
-          //no op just to check the file exists
+
+        try (InputStream creoleStream = expandedCreoleUrl.openStream()) {
+          // no op just to check the file exists
         } catch(IOException ioe) {
           throw new IOException(getBaseURL().toExternalForm()
-                  + " does not exist so this artifact is not a GATE plugin");
+              + " does not exist so this artifact is not a GATE plugin");
         }
-        
-        artifactObj =
-            new SubArtifact(artifactObj,"", "pom");
-        
+
+        artifactObj = new SubArtifact(artifactObj, "", "pom");
+
         artifactRequest.setArtifact(artifactObj);
         artifactResult =
-            repoSystem.resolveArtifact(repoSession,
-                    artifactRequest);
-        
-        ModelBuildingRequest req = new DefaultModelBuildingRequest(); 
-        req.setProcessPlugins(false); 
-        req.setPomFile(artifactResult.getArtifact().getFile()); 
-        req.setModelResolver(new SimpleModelResolver(repoSystem,  
-                repoSession, new ArrayList<RemoteRepository>())); 
-        req.setValidationLevel(ModelBuildingRequest.VALIDATION_LEVEL_MINIMAL); 
-         
-        ModelBuilder modelBuilder = new DefaultModelBuilderFactory().newInstance(); 
-        Model model = modelBuilder.build(req).getEffectiveModel(); 
-        
-        if (model.getName() != null && !model.getName().trim().equals("")) name = model.getName();
-        if (name == null) name = artifact;
-        
-        if (model.getDescription() != null && !model.getDescription().trim().equals("")) description = model.getDescription();
+            repoSystem.resolveArtifact(repoSession, artifactRequest);
+
+        ModelBuildingRequest req = new DefaultModelBuildingRequest();
+        req.setProcessPlugins(false);
+        req.setPomFile(artifactResult.getArtifact().getFile());
+        req.setModelResolver(new SimpleModelResolver(repoSystem, repoSession,
+            repos));
+        req.setValidationLevel(ModelBuildingRequest.VALIDATION_LEVEL_MINIMAL);
+
+        ModelBuilder modelBuilder =
+            new DefaultModelBuilderFactory().newInstance();
+        Model model = modelBuilder.build(req).getEffectiveModel();
+
+        if(model.getName() != null && !model.getName().trim().equals(""))
+          name = model.getName();
+        if(name == null) name = artifact;
+
+        if(model.getDescription() != null
+            && !model.getDescription().trim().equals(""))
+          description = model.getDescription();
 
         // get the creole.xml out of the jar and add jar elements for this
         // jar (marked for scanning) and the dependencies
@@ -752,56 +757,56 @@ public abstract class Plugin {
     @Override
     public Document getCreoleXML() throws Exception {
       Artifact artifactObj =
-              new DefaultArtifact(group, artifact, "jar", version);
-      
+          new DefaultArtifact(group, artifact, "jar", version);
+
       Dependency dependency = new Dependency(artifactObj, "runtime");
 
       List<RemoteRepository> repos = getRepositoryList();
-      
-      ArtifactRequest artifactRequest = new ArtifactRequest(artifactObj, repos, null);
-            
+
+      ArtifactRequest artifactRequest =
+          new ArtifactRequest(artifactObj, repos, null);
+
       RepositorySystem repoSystem = getRepositorySystem();
-      
+
       WorkspaceReader workspace = null;
-      
-      List<URL> persistenceURLStack = PersistenceManager.currentPersistenceURLStack();
-      
+
+      List<URL> persistenceURLStack =
+          PersistenceManager.currentPersistenceURLStack();
+
       List<File> workspaces = new ArrayList<File>();
 
-      if (persistenceURLStack != null && !persistenceURLStack.isEmpty()) {
-    	  for (URL url : persistenceURLStack) {
-    		  try {
-    			  File file = gate.util.Files.fileFromURL(url);
-    			  File cache = new File(file.getParentFile(),"maven-cache.gate");
-    			  if (cache.exists() && cache.isDirectory()) {
-    				  workspaces.add(cache);
-    			  }
-    		  }
-    		  catch (IllegalArgumentException e) {
-    			  //ignore this for now
-    		  }
-    	  }
+      if(persistenceURLStack != null && !persistenceURLStack.isEmpty()) {
+        for(URL url : persistenceURLStack) {
+          try {
+            File file = gate.util.Files.fileFromURL(url);
+            File cache = new File(file.getParentFile(), "maven-cache.gate");
+            if(cache.exists() && cache.isDirectory()) {
+              workspaces.add(cache);
+            }
+          } catch(IllegalArgumentException e) {
+            // ignore this for now
+          }
+        }
       }
       workspaces.addAll(gate.util.maven.Utils.getExtraCacheDirectories());
-      
-      if (!workspaces.isEmpty()) {
-        workspace = new SimpleMavenCache(workspaces.toArray(new File[workspaces.size()]));
+
+      if(!workspaces.isEmpty()) {
+        workspace = new SimpleMavenCache(
+            workspaces.toArray(new File[workspaces.size()]));
       }
-      
-      DefaultRepositorySystemSession repoSession = getRepositorySession(repoSystem, workspace);
+
+      DefaultRepositorySystemSession repoSession =
+          getRepositorySession(repoSystem, workspace);
       repoSession.setTransferListener(this);
-     
+
       ArtifactResult artifactResult =
-          repoSystem.resolveArtifact(repoSession,
-                      artifactRequest);
-            
-      artifactURL =
-              new URL("jar:"
-                      + artifactResult.getArtifact().getFile().toURI().toURL()
-                      + "!/");
-      
+          repoSystem.resolveArtifact(repoSession, artifactRequest);
+
+      artifactURL = new URL("jar:"
+          + artifactResult.getArtifact().getFile().toURI().toURL() + "!/");
+
       metadataArtifactURL = artifactURL;
-      
+
       baseURL = artifactURL;
 
       // check it has a creole.xml at the root
@@ -813,41 +818,33 @@ public abstract class Plugin {
         creoleStream = directoryXmlFileUrl.openStream();
       } catch(IOException ioe) {
         throw new IOException(getBaseURL().toExternalForm()
-                + " does not exist so this artifact is not a GATE plugin");
+            + " does not exist so this artifact is not a GATE plugin");
       }
 
-      CollectRequest collectRequest = new CollectRequest(dependency,repos);
-      
-      
+      CollectRequest collectRequest = new CollectRequest(dependency, repos);
+
       DependencyNode node =
-              repoSystem.collectDependencies(repoSession,
-                      collectRequest).getRoot();
+          repoSystem.collectDependencies(repoSession, collectRequest).getRoot();
 
       DependencyRequest dependencyRequest = new DependencyRequest();
       dependencyRequest.setRoot(node);
-      
-      
 
-      
       DependencyResult result =
-              repoSystem.resolveDependencies(repoSession,
-                      dependencyRequest);
+          repoSystem.resolveDependencies(repoSession, dependencyRequest);
 
-     
-      
       // get the creole.xml out of the jar and add jar elements for this
       // jar (marked for scanning) and the dependencies
       SAXBuilder builder = new SAXBuilder(false);
       Document jdomDoc =
-              builder.build(creoleStream, getBaseURL().toExternalForm());
+          builder.build(creoleStream, getBaseURL().toExternalForm());
 
       Element creoleRoot = jdomDoc.getRootElement();
 
-      for(ArtifactResult ar : result.getArtifactResults()) {        
-        
-    	  Element jarElement = new Element("JAR");
-        jarElement.setText(ar.getArtifact().getFile().toURI().toURL()
-                .toExternalForm());
+      for(ArtifactResult ar : result.getArtifactResults()) {
+
+        Element jarElement = new Element("JAR");
+        jarElement.setText(
+            ar.getArtifact().getFile().toURI().toURL().toExternalForm());
 
         if(ar.getArtifact().equals(artifactResult.getArtifact())) {
           jarElement.setAttribute("SCAN", "true");
@@ -855,41 +852,41 @@ public abstract class Plugin {
 
         creoleRoot.addContent(jarElement);
       }
-      
-      artifactObj =
-          new SubArtifact(artifactObj,"", "pom");
-      
+
+      artifactObj = new SubArtifact(artifactObj, "", "pom");
+
       artifactRequest.setArtifact(artifactObj);
-      artifactResult =
-          repoSystem.resolveArtifact(repoSession,
-                  artifactRequest);
-      
-      ModelBuildingRequest req = new DefaultModelBuildingRequest(); 
-      req.setProcessPlugins(false); 
-      req.setPomFile(artifactResult.getArtifact().getFile()); 
-      req.setModelResolver(new SimpleModelResolver(repoSystem,  
-              repoSession, new ArrayList<RemoteRepository>())); 
-      req.setValidationLevel(ModelBuildingRequest.VALIDATION_LEVEL_MINIMAL); 
-       
-      ModelBuilder modelBuilder = new DefaultModelBuilderFactory().newInstance(); 
-      Model model = modelBuilder.build(req).getEffectiveModel(); 
-      
-      if (model.getName() != null && !model.getName().trim().equals("")) name = model.getName();
-      if (name == null) name = artifact;
-      
-      if (model.getDescription() != null && model.getDescription().trim().equals("")) description = model.getDescription();
-      
-      /*System.out.println(model.getOrganization().getName());
-      for (org.apache.maven.model.Repository r : model.getRepositories()) {
-        System.out.println(r.getName());
-      }
-      for (License l : model.getLicenses()) {
-        System.out.println(l.getName());
-      }*/
-      
+      artifactResult = repoSystem.resolveArtifact(repoSession, artifactRequest);
+
+      ModelBuildingRequest req = new DefaultModelBuildingRequest();
+      req.setProcessPlugins(false);
+      req.setPomFile(artifactResult.getArtifact().getFile());
+      req.setModelResolver(new SimpleModelResolver(repoSystem, repoSession,
+          repos));
+      req.setValidationLevel(ModelBuildingRequest.VALIDATION_LEVEL_MINIMAL);
+
+      ModelBuilder modelBuilder =
+          new DefaultModelBuilderFactory().newInstance();
+      Model model = modelBuilder.build(req).getEffectiveModel();
+
+      if(model.getName() != null && !model.getName().trim().equals(""))
+        name = model.getName();
+      if(name == null) name = artifact;
+
+      if(model.getDescription() != null
+          && model.getDescription().trim().equals(""))
+        description = model.getDescription();
+
+      /*
+       * System.out.println(model.getOrganization().getName()); for
+       * (org.apache.maven.model.Repository r : model.getRepositories()) {
+       * System.out.println(r.getName()); } for (License l :
+       * model.getLicenses()) { System.out.println(l.getName()); }
+       */
+
       return jdomDoc;
     }
-    
+
     // accessors for the Maven coordinates
 
     /**
@@ -916,40 +913,43 @@ public abstract class Plugin {
     @Override
     public void transferInitiated(TransferEvent event)
         throws TransferCancelledException {
-      //ignore this one      
+      // ignore this one
     }
 
     @Override
     public void transferStarted(TransferEvent event)
         throws TransferCancelledException {
       fireDownloadStarted(event.getResource().getFile().getName());
-      
+
     }
 
     @Override
     public void transferProgressed(TransferEvent event)
         throws TransferCancelledException {
-      fireDownloadProgressed(event.getResource().getFile().getName(), event.getResource().getContentLength(), event.getTransferredBytes());
-      
+      fireDownloadProgressed(event.getResource().getFile().getName(),
+          event.getResource().getContentLength(), event.getTransferredBytes());
+
     }
 
     @Override
     public void transferCorrupted(TransferEvent event)
         throws TransferCancelledException {
-      fireDownloadFailed(event.getResource().getFile().getName(), event.getException());      
+      fireDownloadFailed(event.getResource().getFile().getName(),
+          event.getException());
     }
 
     @Override
     public void transferSucceeded(TransferEvent event) {
-      fireDownloadSucceeded(event.getResource().getFile().getName());      
+      fireDownloadSucceeded(event.getResource().getFile().getName());
     }
 
     @Override
     public void transferFailed(TransferEvent event) {
-      fireDownloadFailed(event.getResource().getFile().getName(), event.getException());      
+      fireDownloadFailed(event.getResource().getFile().getName(),
+          event.getException());
     }
   }
-  
+
   /**
    * ClassVisitor that uses information from a CreoleResource annotation on the
    * visited class (if such exists) to fill in the name and comment in the
@@ -974,7 +974,7 @@ public abstract class Plugin {
      * Type descriptor for the CreoleResource annotation type.
      */
     private static final String CREOLE_RESOURCE_DESC =
-            Type.getDescriptor(CreoleResource.class);
+        Type.getDescriptor(CreoleResource.class);
 
     /**
      * Visit the class header, checking whether this is an abstract class or
@@ -982,9 +982,9 @@ public abstract class Plugin {
      */
     @Override
     public void visit(int version, int access, String name, String signature,
-            String superName, String[] interfaces) {
-      isAbstract = ((access &
-            (Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT)) != 0);
+        String superName, String[] interfaces) {
+      isAbstract =
+          ((access & (Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT)) != 0);
     }
 
     /**
@@ -1000,39 +1000,40 @@ public abstract class Plugin {
           public void visit(String name, Object value) {
             if(name.equals("name") && resInfo.getResourceName() == null) {
               resInfo.setResourceName((String)value);
-            }
-            else if(name.equals("comment") && resInfo.getResourceComment() == null) {
+            } else if(name.equals("comment")
+                && resInfo.getResourceComment() == null) {
               resInfo.setResourceComment((String)value);
             }
           }
 
           @Override
-          public AnnotationVisitor visitAnnotation(String name,
-                    String desc) {
+          public AnnotationVisitor visitAnnotation(String name, String desc) {
             // don't want to recurse into AutoInstance annotations
             return this;
           }
         };
-      }
-      else {
+      } else {
         return super.visitAnnotation(desc, visible);
       }
     }
   }
-  
+
   public static class Component extends Plugin {
 
     private Class<? extends Resource> resourceClass;
-    
-    public Component(Class<? extends Resource> resourceClass) throws MalformedURLException {
+
+    public Component(Class<? extends Resource> resourceClass)
+        throws MalformedURLException {
       this.resourceClass = resourceClass;
-      baseURL = (new URL(resourceClass.getResource("/gate/creole/CreoleRegisterImpl.class"), "."));
+      baseURL = (new URL(
+          resourceClass.getResource("/gate/creole/CreoleRegisterImpl.class"),
+          "."));
     }
-    
+
     public String getName() {
       return resourceClass.getName();
     }
-    
+
     @Override
     public Document getCreoleXML() throws Exception, JDOMException {
       Document doc = new Document();
@@ -1040,11 +1041,11 @@ public abstract class Plugin {
       doc.addContent(element = new Element("CREOLE-DIRECTORY"));
       element.addContent(element = new Element("CREOLE"));
       element.addContent(element = new Element("RESOURCE"));
-      Element classElement  = new Element("CLASS");
+      Element classElement = new Element("CLASS");
       classElement.setText(resourceClass.getName());
       element.addContent(classElement);
-      
+
       return doc;
-    }    
+    }
   }
 }
